--- a/package.json
+++ b/package.json
@@ -47,6 +47,8 @@
     "@adobe/helix-shared-utils": "3.0.2",
     "@adobe/mdast-util-gridtables": "4.0.4",
     "@adobe/remark-gridtables": "3.0.4",
+    "@aws-sdk/client-dynamodb": "^3.582.0",
+    "@aws-sdk/lib-dynamodb": "^3.582.0",
     "cookie": "0.6.0",
     "github-slugger": "2.0.0",
     "hast-util-raw": "9.0.3",
